--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "google-re2>=1.1.20240702",
+    "ipykernel>=7.1.0",
     "pywatchman>=2.0.0",
 ]
+
+[dependency-groups]
+dev = []
